src/AmazeParser.java
// $ANTLR 3.4 C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g 2012-05-05 23:31:11

//  package compiler;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class AmazeParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BOARD", "BOOLEAN", "COMMENT", "CONST", "DBL_EQLS", "DIVIDE", "DRAW", "DWN", "ELSE", "END", "FALSE", "FUNC", "GRTR", "GRTR_EQL", "ID", "IF", "INT", "LEFT", "LESS", "LESS_EQL", "MAIN", "MINUS", "NEGATIONS", "NOT", "NOT_EQLS", "OR", "PATH", "PLUS", "POINT", "PRINT", "REASSIGN", "RETURN", "RIGHT", "SET", "SIZE", "START", "STRING", "STRUCTURE", "TIMES", "TRUE", "UPP", "WHILE", "WS", "'('", "')'", "','", "':'", "';'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int AND=4;
    public static final int ASSIGN=5;
    public static final int BOARD=6;
    public static final int BOOLEAN=7;
    public static final int COMMENT=8;
    public static final int CONST=9;
    public static final int DBL_EQLS=10;
    public static final int DIVIDE=11;
    public static final int DRAW=12;
    public static final int DWN=13;
    public static final int ELSE=14;
    public static final int END=15;
    public static final int FALSE=16;
    public static final int FUNC=17;
    public static final int GRTR=18;
    public static final int GRTR_EQL=19;
    public static final int ID=20;
    public static final int IF=21;
    public static final int INT=22;
    public static final int LEFT=23;
    public static final int LESS=24;
    public static final int LESS_EQL=25;
    public static final int MAIN=26;
    public static final int MINUS=27;
    public static final int NEGATIONS=28;
    public static final int NOT=29;
    public static final int NOT_EQLS=30;
    public static final int OR=31;
    public static final int PATH=32;
    public static final int PLUS=33;
    public static final int POINT=34;
    public static final int PRINT=35;
    public static final int REASSIGN=36;
    public static final int RETURN=37;
    public static final int RIGHT=38;
    public static final int SET=39;
    public static final int SIZE=40;
    public static final int START=41;
    public static final int STRING=42;
    public static final int STRUCTURE=43;
    public static final int TIMES=44;
    public static final int TRUE=45;
    public static final int UPP=46;
    public static final int WHILE=47;
    public static final int WS=48;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AmazeParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AmazeParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return AmazeParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g"; }


    public static class maze_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "maze"
    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:22:1: maze : declaration_list main_declaration EOF !;
    public final AmazeParser.maze_return maze() throws RecognitionException {
        AmazeParser.maze_return retval = new AmazeParser.maze_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token EOF3=null;
        AmazeParser.declaration_list_return declaration_list1 =null;

        AmazeParser.main_declaration_return main_declaration2 =null;


        CommonTree EOF3_tree=null;

        try {
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:22:6: ( declaration_list main_declaration EOF !)
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:22:9: declaration_list main_declaration EOF !
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_declaration_list_in_maze70);
            declaration_list1=declaration_list();

            state._fsp--;

            adaptor.addChild(root_0, declaration_list1.getTree());

            pushFollow(FOLLOW_main_declaration_in_maze80);
            main_declaration2=main_declaration();

            state._fsp--;

            adaptor.addChild(root_0, main_declaration2.getTree());

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_maze91); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "maze"


    public static class declaration_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declaration_list"
    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:28:1: declaration_list : ( declaration declaration_list |);
    public final AmazeParser.declaration_list_return declaration_list() throws RecognitionException {
        AmazeParser.declaration_list_return retval = new AmazeParser.declaration_list_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AmazeParser.declaration_return declaration4 =null;

        AmazeParser.declaration_list_return declaration_list5 =null;



        try {
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:28:18: ( declaration declaration_list |)
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( ((LA1_0 >= BOARD && LA1_0 <= BOOLEAN)||LA1_0==FUNC||LA1_0==INT||LA1_0==STRUCTURE) ) {
                alt1=1;
            }
            else if ( (LA1_0==MAIN) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:28:20: declaration declaration_list
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_declaration_in_declaration_list106);
                    declaration4=declaration();

                    state._fsp--;

                    adaptor.addChild(root_0, declaration4.getTree());

                    pushFollow(FOLLOW_declaration_list_in_declaration_list108);
                    declaration_list5=declaration_list();

                    state._fsp--;

                    adaptor.addChild(root_0, declaration_list5.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:30:6: 
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "declaration_list"


    public static class declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declaration"
    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:32:1: declaration : ( structure_declaration | board_declaration | var_declaration | function_declaration );
    public final AmazeParser.declaration_return declaration() throws RecognitionException {
        AmazeParser.declaration_return retval = new AmazeParser.declaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AmazeParser.structure_declaration_return structure_declaration6 =null;

        AmazeParser.board_declaration_return board_declaration7 =null;

        AmazeParser.var_declaration_return var_declaration8 =null;

        AmazeParser.function_declaration_return function_declaration9 =null;



        try {
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:32:13: ( structure_declaration | board_declaration | var_declaration | function_declaration )
            int alt2=4;
            switch ( input.LA(1) ) {
            case STRUCTURE:
                {
                alt2=1;
                }
                break;
            case BOARD:
                {
                alt2=2;
                }
                break;
            case BOOLEAN:
            case INT:
                {
                alt2=3;
                }
                break;
            case FUNC:
                {
                alt2=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:32:15: structure_declaration
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_structure_declaration_in_declaration134);
                    structure_declaration6=structure_declaration();

                    state._fsp--;

                    adaptor.addChild(root_0, structure_declaration6.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:33:16: board_declaration
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_board_declaration_in_declaration151);
                    board_declaration7=board_declaration();

                    state._fsp--;

                    adaptor.addChild(root_0, board_declaration7.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:34:15: var_declaration
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_var_declaration_in_declaration168);
                    var_declaration8=var_declaration();

                    state._fsp--;

                    adaptor.addChild(root_0, var_declaration8.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:35:15: function_declaration
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_function_declaration_in_declaration184);
                    function_declaration9=function_declaration();

                    state._fsp--;

                    adaptor.addChild(root_0, function_declaration9.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "declaration"


    public static class board_declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "board_declaration"
    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:38:1: board_declaration : BOARD ID '{' ! board_declaration_list '}' !;
    public final AmazeParser.board_declaration_return board_declaration() throws RecognitionException {
        AmazeParser.board_declaration_return retval = new AmazeParser.board_declaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token BOARD10=null;
        Token ID11=null;
        Token char_literal12=null;
        Token char_literal14=null;
        AmazeParser.board_declaration_list_return board_declaration_list13 =null;


        CommonTree BOARD10_tree=null;
        CommonTree ID11_tree=null;
        CommonTree char_literal12_tree=null;
        CommonTree char_literal14_tree=null;

        try {
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:38:18: ( BOARD ID '{' ! board_declaration_list '}' !)
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:38:20: BOARD ID '{' ! board_declaration_list '}' !
            {
            root_0 = (CommonTree)adaptor.nil();


            BOARD10=(Token)match(input,BOARD,FOLLOW_BOARD_in_board_declaration204); 
            BOARD10_tree = 
            (CommonTree)adaptor.create(BOARD10)
            ;
            adaptor.addChild(root_0, BOARD10_tree);


            ID11=(Token)match(input,ID,FOLLOW_ID_in_board_declaration206); 
            ID11_tree = 
            (CommonTree)adaptor.create(ID11)
            ;
            adaptor.addChild(root_0, ID11_tree);


            char_literal12=(Token)match(input,54,FOLLOW_54_in_board_declaration208); 

            pushFollow(FOLLOW_board_declaration_list_in_board_declaration211);
            board_declaration_list13=board_declaration_list();

            state._fsp--;

            adaptor.addChild(root_0, board_declaration_list13.getTree());

            char_literal14=(Token)match(input,55,FOLLOW_55_in_board_declaration213); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "board_declaration"


    public static class board_declaration_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "board_declaration_list"
    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:42:1: board_declaration_list : size_declaration start_declaration end_declaration board_statement_list2 ;
    public final AmazeParser.board_declaration_list_return board_declaration_list() throws RecognitionException {
        AmazeParser.board_declaration_list_return retval = new AmazeParser.board_declaration_list_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AmazeParser.size_declaration_return size_declaration15 =null;

        AmazeParser.start_declaration_return start_declaration16 =null;

        AmazeParser.end_declaration_return end_declaration17 =null;

        AmazeParser.board_statement_list2_return board_statement_list218 =null;



        try {
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:42:23: ( size_declaration start_declaration end_declaration board_statement_list2 )
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:42:26: size_declaration start_declaration end_declaration board_statement_list2
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_size_declaration_in_board_declaration_list224);
            size_declaration15=size_declaration();

            state._fsp--;

            adaptor.addChild(root_0, size_declaration15.getTree());

            pushFollow(FOLLOW_start_declaration_in_board_declaration_list226);
            start_declaration16=start_declaration();

            state._fsp--;

            adaptor.addChild(root_0, start_declaration16.getTree());

            pushFollow(FOLLOW_end_declaration_in_board_declaration_list228);
            end_declaration17=end_declaration();

            state._fsp--;

            adaptor.addChild(root_0, end_declaration17.getTree());

            pushFollow(FOLLOW_board_statement_list2_in_board_declaration_list230);
            board_statement_list218=board_statement_list2();

            state._fsp--;

            adaptor.addChild(root_0, board_statement_list218.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "board_declaration_list"


    public static class size_declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "size_declaration"
    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:45:1: size_declaration : SIZE ':' ! expression ',' ! expression ';' !;
    public final AmazeParser.size_declaration_return size_declaration() throws RecognitionException {
        AmazeParser.size_declaration_return retval = new AmazeParser.size_declaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token SIZE19=null;
        Token char_literal20=null;
        Token char_literal22=null;
        Token char_literal24=null;
        AmazeParser.expression_return expression21 =null;

        AmazeParser.expression_return expression23 =null;


        CommonTree SIZE19_tree=null;
        CommonTree char_literal20_tree=null;
        CommonTree char_literal22_tree=null;
        CommonTree char_literal24_tree=null;

        try {
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:45:19: ( SIZE ':' ! expression ',' ! expression ';' !)
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:45:21: SIZE ':' ! expression ',' ! expression ';' !
            {
            root_0 = (CommonTree)adaptor.nil();


            SIZE19=(Token)match(input,SIZE,FOLLOW_SIZE_in_size_declaration250); 
            SIZE19_tree = 
            (CommonTree)adaptor.create(SIZE19)
            ;
            adaptor.addChild(root_0, SIZE19_tree);


            char_literal20=(Token)match(input,52,FOLLOW_52_in_size_declaration252); 

            pushFollow(FOLLOW_expression_in_size_declaration255);
            expression21=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression21.getTree());

            char_literal22=(Token)match(input,51,FOLLOW_51_in_size_declaration257); 

            pushFollow(FOLLOW_expression_in_size_declaration260);
            expression23=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression23.getTree());

            char_literal24=(Token)match(input,53,FOLLOW_53_in_size_declaration261); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "size_declaration"


    public static class start_declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start_declaration"
    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:48:1: start_declaration : START ':' ! expression ',' ! expression ';' !;
    public final AmazeParser.start_declaration_return start_declaration() throws RecognitionException {
        AmazeParser.start_declaration_return retval = new AmazeParser.start_declaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token START25=null;
        Token char_literal26=null;
        Token char_literal28=null;
        Token char_literal30=null;
        AmazeParser.expression_return expression27 =null;

        AmazeParser.expression_return expression29 =null;


        CommonTree START25_tree=null;
        CommonTree char_literal26_tree=null;
        CommonTree char_literal28_tree=null;
        CommonTree char_literal30_tree=null;

        try {
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:48:19: ( START ':' ! expression ',' ! expression ';' !)
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:48:21: START ':' ! expression ',' ! expression ';' !
            {
            root_0 = (CommonTree)adaptor.nil();


            START25=(Token)match(input,START,FOLLOW_START_in_start_declaration286); 
            START25_tree = 
            (CommonTree)adaptor.create(START25)
            ;
            adaptor.addChild(root_0, START25_tree);


            char_literal26=(Token)match(input,52,FOLLOW_52_in_start_declaration288); 

            pushFollow(FOLLOW_expression_in_start_declaration291);
            expression27=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression27.getTree());

            char_literal28=(Token)match(input,51,FOLLOW_51_in_start_declaration292); 

            pushFollow(FOLLOW_expression_in_start_declaration295);
            expression29=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression29.getTree());

            char_literal30=(Token)match(input,53,FOLLOW_53_in_start_declaration296); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "start_declaration"


    public static class end_declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "end_declaration"
    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:51:1: end_declaration : END ':' ! expression ',' ! expression ';' !;
    public final AmazeParser.end_declaration_return end_declaration() throws RecognitionException {
        AmazeParser.end_declaration_return retval = new AmazeParser.end_declaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token END31=null;
        Token char_literal32=null;
        Token char_literal34=null;
        Token char_literal36=null;
        AmazeParser.expression_return expression33 =null;

        AmazeParser.expression_return expression35 =null;


        CommonTree END31_tree=null;
        CommonTree char_literal32_tree=null;
        CommonTree char_literal34_tree=null;
        CommonTree char_literal36_tree=null;

        try {
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:51:17: ( END ':' ! expression ',' ! expression ';' !)
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:51:19: END ':' ! expression ',' ! expression ';' !
            {
            root_0 = (CommonTree)adaptor.nil();


            END31=(Token)match(input,END,FOLLOW_END_in_end_declaration312); 
            END31_tree = 
            (CommonTree)adaptor.create(END31)
            ;
            adaptor.addChild(root_0, END31_tree);


            char_literal32=(Token)match(input,52,FOLLOW_52_in_end_declaration314); 

            pushFollow(FOLLOW_expression_in_end_declaration317);
            expression33=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression33.getTree());

            char_literal34=(Token)match(input,51,FOLLOW_51_in_end_declaration318); 

            pushFollow(FOLLOW_expression_in_end_declaration321);
            expression35=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression35.getTree());

            char_literal36=(Token)match(input,53,FOLLOW_53_in_end_declaration322); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "end_declaration"


    public static class var_declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "var_declaration"
    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:54:1: var_declaration : ( int_declaration | bool_declaration );
    public final AmazeParser.var_declaration_return var_declaration() throws RecognitionException {
        AmazeParser.var_declaration_return retval = new AmazeParser.var_declaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AmazeParser.int_declaration_return int_declaration37 =null;

        AmazeParser.bool_declaration_return bool_declaration38 =null;



        try {
            // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:54:17: ( int_declaration | bool_declaration )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==INT) ) {
                alt3=1;
            }
            else if ( (LA3_0==BOOLEAN) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:54:19: int_declaration
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_int_declaration_in_var_declaration348);
                    int_declaration37=int_declaration();

                    state._fsp--;

                    adaptor.addChild(root_0, int_declaration37.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Frederic\\Documents\\amaze\\amaze_final\\src\\Amaze.g:55:19: bool_declaration
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_bool_declaration_in_var_declaration368);
                    bool_declaration38=bool_declaration();

                    state._fsp--;

                    adaptor.addChild(root_0, bool_declaration38.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "var_declaration"


    public static class int_declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
